styles/ProjectModal.module.scss
@import "./variables";
@import "./mixins";

.modalContainer {
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	z-index: 10;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: rgba(37, 46, 66, 0.8);
}

.projectModal {
	background-color: $off-white;
	position: relative;
	border-radius: 6px;
	display: grid;
	grid-template-areas: 'description image image image' 'description image image image'
		'buffer controls controls controls';
	grid-template-rows: 1fr;
	width: 85vw;
	max-height: 90vh;
	padding: 2.2rem 2.2rem 0.5rem 2.2rem;

	.closeBtn {
		position: absolute;
		top: 0.4rem;
		right: 0.3rem;
		background-color: transparent;
		border: none;
		font-size: 2rem;
		cursor: pointer;
		color: $gray;

		&:hover {
			color: $accent;
		}
	}

	.controls {
		grid-area: controls;
		padding: .5rem;
		display: flex;
		flex-flow: row nowrap;
		justify-content: center;
		gap: 1rem;

		div {
			width: .81rem;
			height: .81rem;
			background-color: $light-gray;
			border-radius: 100%;
			cursor: pointer;

			&:hover {
				background-color: $gray;
			}
		}

		.active {
			background-color: $medium-blue;
		}
	}
}

.projectHeader {
	display: flex;
	flex-flow: row-wrap;
	align-items: center;
	width: 100%;
}

.demoBtnMobile {
	display: inline-block;
	display: flex;
	align-self: center;
	align-items: center;
	text-decoration: none;
	color: $accent;
	gap: 0.3rem;
}

.descriptionContainer {
	display: flex;
	flex-direction: column;
	align-items: space-between;
	grid-area: description;

	.projectTitle {
		font-size: 1.7rem;
		font-weight: 700;
		color: $dark-blue;
		margin-right: 1rem;
	}
	.projectTech {
		margin-top: 1rem;
		font-weight: 300;
		color: $medium-blue;
		font-size: 1.2rem;
		margin-right: 1.5rem;
	}
	.projectSummary {
		line-height: 160%;
		color: $dark-blue;
		flex-grow: 1;
		overflow-y: auto;
		margin-right: 1.5rem;

		p {
			margin-top: 1rem;
		}
	}
}

.buffer {
	grid-area: buffer;
}

.btnContainer {
	display: flex;
	flex-flow: row wrap;
	align-items: center;
	margin-top: 1.5rem;
	width: 100%;

	a {
		text-decoration: none;
	}

	.primaryBtn {
		@include btnDefault;
		padding: .3rem 1.7rem;
		font-size: 1.2rem;
		color: $off-white;
		background-color: $accent;
		border-radius: 6px;
		cursor: pointer;
		border: 3px solid transparent;

		&:hover {
			background-color: transparent;
			color: $accent;
			border: 3px solid $accent;
			font-weight: 500;
		}
	}

	.secondaryBtn {
		display: flex;
		align-items: center;
		gap: .3rem;
		font-size: 1.1rem;
		color: $medium-blue;
		font-weight: 300;
		margin-left: 1.5vw;

		&:hover {
			color: $accent;
		}
	}
}

.projectImageContainer {
	grid-area: image;
	position: relative;
	height: fit-content;
	width: fit-content;

	.controlsOverlay {
		position: absolute;
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;
		border-radius: 6px;
		display: flex;
		justify-content: space-between;
		opacity: 0;

		&:hover {
			opacity: 1;
		}

		.arrowLeftContainer,
		.arrowRightContainer {
			height: 100%;
			width: 8%;
			background-color: $off-white;
			opacity: 0.2;
			display: flex;
			justify-content: center;
			align-items: center;
			cursor: pointer;

			&:hover {
				opacity: .4;
			}

			.arrowLeft,
			.arrowRight {
				font-size: 2rem;
				color: $dark-blue;
			}
		}
	}

	.projectImageCarousel {
		width: 100%;

		img {
			width: 100%;
			height: auto;
			max-height: 74vh;
			border-radius: 6px;
			display: block;
			margin-left: auto;
		}
	}
}

//for squeezed MAC and 1920px
@media screen and (min-height: 881px) and (max-width: 1547px) {
	.projectModal {
		width: 95vw;
	}
}

//for squeezed MAC and 1920px <1396px
@media screen and (min-height: 881px) and (max-width: 1395px) {
	.descriptionContainer {
		.projectTitle {
			margin-right: 0.5rem;
		}
		.projectTech {
			margin-right: 0.5rem;
		}
		.projectSummary {
			margin-right: 0.5rem;
		}
	}
}

//for squeezed MAC and 1920px <1320px
@media screen and (min-height: 881px) and (max-width: 1320px) {
	.projectModal {
		width: 100vw;
		padding-left: 1rem;
		padding-right: 1rem;
	}
}

// for 1536px
@media screen and (max-height: 880px) and (max-width: 1536px) {
	.projectModal {
		padding: 2rem 2rem 0.4rem 2rem;

		.closeBtn {
			top: 0.5rem;
			right: 0.5rem;
			font-size: 1.7rem;
		}

		.controls {
			gap: 0.75rem;

			div {
				width: .7rem;
				height: .7rem;
			}
		}
	}

	.descriptionContainer {
		.projectTitle {
			font-size: 1.5rem;
		}

		.projectTech {
			margin-top: 0.7rem;
			font-size: 1.1rem;
		}
		.projectSummary {
			margin-top: 0.7rem;
			line-height: 150%;
		}
	}

	.btnContainer {
		margin-right: 1rem;
		margin-top: 1rem;

		.primaryBtn {
			padding: .2rem 1.4rem;
			font-size: 1.1rem;
		}

		.secondaryBtn {
			gap: .2rem;
			font-size: 1rem;
		}
	}
}

// for squeezed 1536px
@media screen and (max-height: 880px) and (max-width: 1510px) {
	// .btnContainer {
	// 	width: 9.6rem;

	// 	.secondaryBtn {
	// 		margin-top: 0.3rem;
	// 	}
	// }
	.projectModal {
		width: 90vw;
	}
}

// for squeezed 1536px
@media screen and (max-height: 880px) and (max-width: 1422px) {
	.projectModal {
		width: 95vw;
	}
}

// for squeezed 1536px
@media screen and (max-height: 880px) and (max-width: 1296px) {
	.projectModal {
		width: 100vw;
		padding: 2rem 1rem 0.4rem 1rem;
	}
}

// for squeezed 1536px
@media screen and (max-height: 880px) and (max-width: 1230px) {
	.projectModal {
		height: 95%;
	}
}

// for 1366px
@media screen and (max-height: 720px) and (max-width: 1366px) {
	.projectModal {
		padding: 1.2rem 1.2rem 0rem 1.2rem;
		width: 85vw;
		max-height: 95vh;

		.closeBtn {
			top: 0rem;
			right: 0rem;
			font-size: 1.5rem;
		}

		.controls {
			gap: 0.65rem;

			div {
				width: .55rem;
				height: .55rem;
			}
		}
	}

	.descriptionContainer {
		.projectTitle {
			font-size: 1.3rem;
		}

		.projectTech {
			margin-top: 0.4rem;
			font-size: 1rem;
		}
		.projectSummary {
			margin-top: 0.4rem;
			line-height: 170%;
			font-size: 0.9rem;
		}
	}

	.btnContainer {
		margin-top: 0.7rem;
		width: 95%;

		.primaryBtn {
			padding: .1rem 1.2rem;
			font-size: 1rem;
		}

		.secondaryBtn {
			font-size: 0.86rem;
		}
	}
}

//for IPAD PRO
@media screen and(min-height: 1080px) and (max-width: 1024px) {
	.projectModal {
		display: grid;
		grid-template-areas: ' image' 'controls' 'description';
		overflow-y: scroll;
		overflow-x: hidden;
		padding: 2rem;
		width: 92vw;
		max-height: 94vh;

		.closeBtn {
			position: absolute;
			top: 0.1rem;
			right: 0rem;
			background-color: transparent;
			border: none;
			font-size: 2rem;
			cursor: pointer;
			color: $gray;

			&:hover {
				color: $accent;
			}
		}

		.buffer {
			display: none;
		}
	}

	.descriptionContainer {
		display: flex;
		justify-content: space-between;
		flex-grow: 1;

		.projectTitle {
			display: inline-block;
			font-size: 1.5rem;
		}

		.projectTech {
			margin-top: 0.8rem;
			font-size: 1rem;
		}
		.projectSummary {
			margin-top: 0.7rem;
			line-height: 150%;
		}
	}

	.btnContainer {
		display: flex;
		flex-flow: row wrap;
		justify-content: flex-start;
		align-items: center;
		width: 100%;

		.secondaryBtn {
			margin-left: 1.5rem;
		}
	}

	.projectImageCarousel {
		img {
			max-height: 100%;
		}
	}
}

//for IPAD
@media screen and (max-height: 1080px) and (max-width: 1100px) {
	.projectModal {
		position: fixed;
		top: 3vh;
		bottom: 3vh;
		display: grid;
		grid-template-areas: ' image' 'controls' 'description';
		grid-template-rows: auto auto 1fr;
		overflow-y: scroll;
		overflow-x: hidden;
		padding: 1.7rem;
		width: 92vw;
		max-height: 94vh;

		.closeBtn {
			position: fixed;
			top: 1.7vh;
			right: 4.5vh;
			font-size: 2.8vh;
			border-radius: 50%;
			background-color: #1c2333;
			color: $off-white;
			z-index: 10;
		}

		.buffer {
			display: none;
		}
	}

	.descriptionContainer {
		display: flex;
		justify-content: space-between;
		flex-grow: 1;
		margin-top: 0.8rem;

		.projectTitle {
			display: inline;
			font-size: 1.5rem;
		}

		.projectTech {
			margin-top: 0.8rem;
			font-size: 1rem;
		}
		.projectSummary {
			margin-top: 0.7rem;
			line-height: 150%;
		}
	}

	.btnContainer {
		display: flex;
		flex-flow: row wrap;
		justify-content: flex-start;
		align-items: center;
		width: 100%;

		.secondaryBtn {
			margin-left: 1.5rem;
		}
	}

	.projectImageCarousel {
		img {
			width: 100%;
			height: auto;
			max-height: 74vh;
			border-radius: 6px;
			display: block;
			margin-left: auto;
		}
	}
}

// for PHONES
@media screen and (min-height: 568px) and (max-width: 567px) {
	.projectModal {
		top: 12vw;
		bottom: 12vw;
		position: fixed;
		display: grid;
		grid-template-areas: ' image' 'controls' 'description';
		width: 92vw;
		height: auto;
		overflow-y: scroll;
		overflow-x: hidden;
		padding: 6.5vw 4vw 5vw 4vw;

		.closeBtn {
			position: fixed;
			top: 8.5vw;
			right: 6.5vw;
			font-size: 7vw;
			border-radius: 50%;
			background-color: #1c2333;
			color: $off-white;
			z-index: 10;
		}

		.buffer {
			display: none;
		}

		.controls {
			div {
				width: 2.5vw;
				height: 2.5vw;
			}
		}
	}

	.descriptionContainer {
		display: flex;
		justify-content: space-between;
		flex-grow: 1;

		.projectTitle {
			font-size: 1.5rem;
		}

		.projectTech {
			margin-top: 0.8rem;
			font-size: 1rem;
		}
		.projectSummary {
			margin-top: 0.7rem;
			line-height: 190%;
		}
	}

	.btnContainer {
		display: flex;
		flex-flow: row wrap;
		justify-content: flex-start;
		align-items: center;
		margin-top: 1rem;
		width: 100%;

		a {
			text-decoration: none;
		}

		.primaryBtn {
			@include btnDefault;
			padding: .3rem 1.3rem;
			font-size: 1.1rem;
		}

		.secondaryBtn {
			gap: .2rem;
			font-size: 1rem;
			margin-left: .5rem;

			svg {
				height: 0.92rem;
			}
		}
	}

	.projectImageContainer {
		.controlsOverlay {
			display: none;
		}
	}
}

//for phones HORIZONTAL
@media screen and (max-width: 812px) and (max-height: 567px) {
	.projectModal {
		top: 2vh;
		bottom: 2vh;
		position: fixed;
		display: grid;
		grid-template-areas: ' image' 'controls' 'description';
		width: 76vw;
		height: auto;
		overflow-y: scroll;
		overflow-x: hidden;
		padding: 6.5vh 4vh 5vh 4vh;

		.closeBtn {
			top: -0.1rem;
			right: 0rem;
			font-size: 1.8rem;
			z-index: 10;
		}

		.buffer {
			display: none;
		}

		.controls {
			div {
				width: 2.5vh;
				height: 2.5vw h;
			}
		}
	}

	.descriptionContainer {
		display: flex;
		justify-content: space-between;
		flex-grow: 1;

		.projectTitle {
			margin-top: 0.8rem;
			font-size: 1.5rem;
		}
		.projectTech {
			margin-top: 0.8rem;
			font-size: 1rem;
		}
		.projectSummary {
			margin-top: 0.7rem;
			line-height: 190%;
		}
	}

	.btnContainer {
		display: flex;
		flex-flow: row wrap;
		justify-content: flex-start;
		align-items: center;
		margin-top: 1rem;
		width: 100%;

		a {
			text-decoration: none;
		}

		.primaryBtn {
			@include btnDefault;
			padding: .3rem 1.3rem;
			font-size: 1.1rem;
		}

		.secondaryBtn {
			gap: .2rem;
			font-size: 1rem;
			margin-left: .5rem;

			svg {
				height: 0.92rem;
			}
		}
	}

	.projectImageContainer {
		.controlsOverlay {
			display: none;
		}
	}
}

